// Copyright (c) 2022-2023 - for information on the respective copyright owner
// see the NOTICE file and/or the repository at
// https://github.com/catenax-ng/product-esc-backbone-code
//
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package escbackbone.resourcesync;


import "escbackbone/resourcesync/resource.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/catenax/esc-backbone/x/resourcesync/types";


message EventCreateResource{
  string creator = 1;
  Resource resource = 2 [(gogoproto.nullable) = false,  (gogoproto.embed) = true];
}

message EventDeleteResource{
  string creator = 1;
  Resource resource = 2 [(gogoproto.nullable) = false,  (gogoproto.embed) = true];
}

message EventUpdateResource{
  string creator = 1;
  Resource resource = 2 [(gogoproto.nullable) = false,  (gogoproto.embed) = true];
}
