syntax = "proto3";
package escbackbone.resourcesync;

option go_package = "github.com/catenax/esc-backbone/x/resourcesync/types";
import "escbackbone/resourcesync/resource.proto"; 
import "escbackbone/resourcesync/audit.proto"; 
import "gogoproto/gogo.proto";

message ResourceMap {
  Resource resource = 1 [(gogoproto.nullable) = false,  (gogoproto.embed) = true];
  Audit auditLogs = 2;
  
}

